@@ -20,6 +20,9 @@ Bug fixes:
 - PR#5335: Unix.environment segfaults after a call to clearenv
 - PR#5344: some predifined exceptions need special printing
 
+Feature wishes:
+- PR#4444: new String.trim function, removing leading and trailing whistespace
+
 Objective Caml 3.12.1:
 ----------------------
 
